--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="Finding a Designer has never been so easy.">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
@@ -42,9 +43,11 @@
 
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but designerrecon doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
+    <div class="no-js">
+      <noscript>
+        <strong>We're sorry but Designer Recon doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      </noscript>
+    </div>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
